2006-02-24 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.Gui.OptionPanels/GeneralTextEditorPanel.cs:
	Use one line per field, in order to get attributes properly applied.

2006-02-19 Andrés G. Aragoneses  <knocte@gmail.com>   

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: added
	messages to l10n and improved one string.

2006-01-30 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: workaround
	for bug #77362.

2006-01-26 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.SourceEditor.addin.xml: Added refactory commands to
	context menu.
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Right click now
	moves the cursor to the clicked position.

2006-01-13 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.SourceEditor.addin.xml:
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Made extensible the
	context menu of the editor.

2006-01-10  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Track api changes.

2006-01-04  Alexandre Miguel Pedro Gomes <alexmipego@gmail.com>

	* MonoDevelop.SourceEditor.addin.xml: Added icon to Goto Line option.

2005-12-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	Track changes in the api.

2005-12-02 Itamar Rogel  <chastamar@yahoo.com>

	* Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	Added XML and VBNET to the switch statement so new xml files that
	are added to a project would be identified as
	such and so would have proper syntax highlighting.
	bug #76882
	
2005-11-30  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	Fixed search when the search starts in the middle of the word being
	searched for. Fixed looping when backward search wraps.

2005-11-28  Peter Johanson  <latexer@gentoo.org> 
